@@ -49,9 +49,9 @@
  */
 
 static void free_wait(p)
-REGOPT select_table * p;
+register select_table * p;
 {
-	REGOPT struct select_table_entry * entry = p->entry + p->nr;
+	register struct select_table_entry * entry = p->entry + p->nr;
 
 	while (p->nr > 0) {
 		p->nr--;
@@ -59,6 +59,25 @@ REGOPT select_table * p;
 		remove_wait_queue(entry->wait_address,&entry->wait);
 	}
 }
+
+/* FIXME */ /* should be an inline function */
+void select_wait(wait_address, p) 
+struct wait_queue ** wait_address;
+register select_table * p;
+{
+	register struct select_table_entry * entry;
+	if (!p || !wait_address)
+		return;
+	if (p->nr >= __MAX_SELECT_TABLE_ENTRIES)
+		return;
+	entry = p->entry + p->nr;
+	entry->wait_address = wait_address;
+	entry->wait.task = current;
+	entry->wait.next = NULL;
+	add_wait_queue(wait_address,&entry->wait);
+	p->nr++;
+}
+
 
 /*
  * The check function checks the ready status of a file using the vfs layer.
@@ -76,20 +95,18 @@ int flag;
 select_table * wait;
 struct file * file;
 {
-	REGOPT struct inode * inode;
-	REGOPT struct file_operations *fops;
+	register struct inode * inode;
+	register struct file_operations *fops;
 	int (*select) ();
 
 	inode = file->f_inode;
-	"QUACK";
-	if ((fops = file->f_op) && (select = fops->select))
-	  {
-	    printk("passing flag %d to select (select=%x)\n", flag, select);
+	if ((fops = file->f_op) && (select = fops->select)) {
 		return select(inode, file, flag, wait)
 		    || (wait && select(inode, file, flag, NULL));
-	  }
-	if (flag != SEL_EX)
+	}
+	if (flag != SEL_EX) {
 		return 1;
+	}
 	return 0;
 }
 
@@ -103,9 +120,9 @@ fd_set *res_out;
 fd_set *res_ex;
 {
 	int count;
-	REGOPT select_table wait_table, *wait;
-	register __ptask currentp = current;
-	struct select_table_entry entry;
+	select_table wait_table, *wait;
+	__ptask currentp = current;
+	struct select_table_entry entry[__MAX_SELECT_TABLE_ENTRIES];
 	unsigned long set;
 	int i,j;
 	int max = -1;
@@ -134,7 +151,7 @@ end_check:
 	n = max + 1;
 	count = 0;
 	wait_table.nr = 0;
-	wait_table.entry = &entry;
+	wait_table.entry = &entry[0];
 	wait = &wait_table;
 repeat:
 	currentp->state = TASK_INTERRUPTIBLE;
@@ -143,7 +160,6 @@ repeat:
 		if (!file)
 			continue;
 		if (FD_ISSET(i,in) && check(SEL_IN,wait,file)) {
-		  /*printk("I think I have input (!)\n");*/
 			FD_SET(i, res_in);
 			count++;
 			wait = NULL;
@@ -160,13 +176,10 @@ repeat:
 		}
 	}
 	wait = NULL;
-	/*printk("count=%d, current->timeout = %d/%d, signal=%d/%d, ~blocked=%d/%d\n", 
-	       count, current->timeout, current->signal, ~current->blocked);*/
 	if (!count && currentp->timeout && !(currentp->signal/* & ~currentp->blocked*/)) {
 		schedule();
 		goto repeat;
 	}
-	/*printk("leaving select\n");*/
 	free_wait(&wait_table);
 	currentp->state = TASK_RUNNING;
 	return count;
@@ -178,37 +191,38 @@ repeat:
  *
  * Use "int" accesses to let user-mode fd_set's be int-aligned.
  */
+#ifdef 0 /* Thuis set of function don't appear to work */
 static int __get_fd_set(nr, fs_pointer, fdset)
 int nr;
-REGOPT int * fs_pointer;
-REGOPT int * fdset;
+register int * fs_pointer;
+register int * fdset;
 {
-  /* round up nr to nearest "int" */
-  nr = (nr + 8*sizeof(int)-1) / (8*sizeof(int));
-  if (fs_pointer) {
-    int error = verify_area(VERIFY_WRITE,fs_pointer,nr*sizeof(int));
-    if (!error) {
-      while (nr) {
-	*fdset = get_user(fs_pointer);
-	nr--;
-	fs_pointer++;
-	fdset++;
-      }
-    }
-    return error;
-  }
-  while (nr) {
-    *fdset = 0;
-    nr--;
-    fdset++;
-  }
-  return 0;
+	/* round up nr to nearest "int" */
+	nr = (nr + 8*sizeof(int)-1) / (8*sizeof(int));
+	if (fs_pointer) {
+		int error = verify_area(VERIFY_WRITE,fs_pointer,nr*sizeof(int));
+		if (!error) {
+			while (nr) {
+				*fdset = get_user(fs_pointer);
+				nr--;
+				fs_pointer++;
+				fdset++;
+			}
+		}
+		return error;
+	}
+	while (nr) {
+		*fdset = 0;
+		nr--;
+		fdset++;
+	}
+	return 0;
 }
 
 static void __set_fd_set(nr, fs_pointer, fdset)
 int nr;
-REGOPT int * fs_pointer;
-REGOPT int * fdset;
+register int * fs_pointer;
+register int * fdset;
 {
 	if (!fs_pointer)
 		return;
@@ -223,7 +237,7 @@ REGOPT int * fdset;
 /* We can do long accesses here, kernel fdsets are always long-aligned */
 static /*inline */void __zero_fd_set(nr, fdset)
 int nr;
-REGOPT unsigned long * fdset;
+register unsigned long * fdset;
 {
 	while (nr >= 0) {
 		*fdset = 0;
@@ -239,17 +253,21 @@ REGOPT unsigned long * fdset;
  * are careful to touch only the defined low bits of any fd_set pointer, this
  * is important for performance too).
  *
+ * This is not relevant in ELKS as we only have 20 descriptors, so we only need one
+ * long to store them in. I have removed the limited type, and we use the ordinary
+ * type instead.
+ *
  * Note a few subtleties: we use "long" for the dummy, not int, and we do a
  * subtract by 1 on the nr of file descriptors. The former is better for
  * machines with long > int, and the latter allows us to test the bit count
  * against "zero or positive", which can mostly be just a sign bit test..
  */
-struct _limited_fd_set {
+/* struct _limited_fd_set {
 	unsigned long dummy[32/(8*(sizeof(unsigned long)))];
 };
 
-typedef struct _limited_fd_set limited_fd_set;
-
+typedef struct _limited_fd_set limited_fd_set; */
+/*
 #define get_fd_set(nr,fsp,fdp) \
 __get_fd_set(nr, (int *) (fsp), (int *) (fdp))
 
@@ -258,7 +276,35 @@ __set_fd_set((nr)-1, (int *) (fsp), (int *) (fdp))
 
 #define zero_fd_set(nr,fdp) \
 __zero_fd_set((nr)-1, (unsigned long *) (fdp))
+*/
 
+#else
+static int get_fd_set(fs_pointer, fdset)
+register int * fs_pointer;
+register int * fdset;
+{
+	if (fs_pointer) {
+		return verified_memcpy_fromfs(fdset, fs_pointer, sizeof(fd_set));
+	}
+	memset(fdset, 0, sizeof(fd_set));
+	return 0;
+}
+
+static void set_fd_set(fs_pointer, fdset)
+register int * fs_pointer;
+register int * fdset;
+{
+	if (!fs_pointer)
+		return;
+	return memcpy_tofs(fs_pointer, fdset, sizeof(fd_set));
+}
+
+static void zero_fd_set(fdset)
+register unsigned long * fdset;
+{
+	memset(fdset, 0, sizeof(fd_set));
+}		
+#endif
 /*
  * We can actually return ERESTARTSYS instead of EINTR, but I'd
  * like to be certain this leads to no problems. So I return
@@ -273,12 +319,12 @@ int n;
 fd_set * inp;
 fd_set * outp;
 fd_set * exp;
-REGOPT struct timeval * tvp;
+register struct timeval * tvp;
 {
   	int error;
-       	limited_fd_set res_in, in;
-	limited_fd_set res_out, out;
-	limited_fd_set res_ex, ex;
+       	fd_set res_in, in;
+	fd_set res_out, out;
+	fd_set res_ex, ex;
 	unsigned long timeout;
 /*
 	fd_set * inp;
@@ -289,20 +335,14 @@ REGOPT struct timeval * tvp;
 	memcpy_fromfs(&outp, table++, 2);
 	memcpy_fromfs(&exp, table, 2); */
 
-#if 1 /* JUST TESTING */
-	printk("SELECT: %d %d %d %d %d\n", n, inp, outp, exp, tvp);
-	printk("SELECT: %d\n", strlen_fromfs(inp));
-	return 0;
-#endif
-
 	error = -EINVAL;
 	if (n < 0)
 		goto out;
 	if (n > NR_OPEN)
 		n = NR_OPEN;
-	if ((error = get_fd_set(n, inp, &in)) ||
-	    (error = get_fd_set(n, outp, &out)) ||
-	    (error = get_fd_set(n, exp, &ex))) goto out;
+	if ((error = get_fd_set(inp, &in)) ||
+	    (error = get_fd_set(outp, &out)) ||
+	    (error = get_fd_set(exp, &ex))) goto out;
 	timeout = ~0UL;
 	if (tvp) {
 		error = verify_area(VERIFY_WRITE, tvp, sizeof(*tvp));
@@ -312,20 +352,19 @@ REGOPT struct timeval * tvp;
 		timeout = ROUND_UP(get_user(&tvp->tv_usec),(1000000/HZ));
 		timeout += get_user(&tvp->tv_sec) * (unsigned long) HZ;
 		if (timeout)
-			timeout += jiffies + 1;
+			timeout += jiffies + 1UL;
 	}
-	zero_fd_set(n, &res_in);
-	zero_fd_set(n, &res_out);
-	zero_fd_set(n, &res_ex);
+	zero_fd_set(&res_in);
+	zero_fd_set(&res_out);
+	zero_fd_set(&res_ex);
 	current->timeout = timeout;
 	error = do_select(n,
-		(fd_set *) &in,
-		(fd_set *) &out,
-		(fd_set *) &ex,
-		(fd_set *) &res_in,
-		(fd_set *) &res_out,
-		(fd_set *) &res_ex);
-	printk("quack quack: sys_select called, timeout=%d.\n", timeout);
+		/*(fd_set *)*/ &in,
+		/*(fd_set *)*/ &out,
+		/*(fd_set *)*/ &ex,
+		/*(fd_set *)*/ &res_in,
+		/*(fd_set *)*/ &res_out,
+		/*(fd_set *)*/ &res_ex);
 	timeout = current->timeout - jiffies - 1;
 	current->timeout = 0L;
 	if (timeout < 0L)
@@ -344,11 +383,10 @@ REGOPT struct timeval * tvp;
 			goto out;
 		error = 0;
 	}
-	set_fd_set(n, inp, &res_in);
-	set_fd_set(n, outp, &res_out);
-	set_fd_set(n, exp, &res_ex);
+	set_fd_set(inp, &res_in);
+	set_fd_set(outp, &res_out);
+	set_fd_set(exp, &res_ex);
 out:
-	printk("returning %d\n", error);
 	return error;
 }
 
